--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.0.0-beta.42",
+    "immutable": "^3.8.2",
     "meteor-node-stubs": "^0.3.2",
     "postcss-load-config": "^1.2.0",
     "react": "^16.4.1",
